--- a/create-user-rke.yml
+++ b/create-user-rke.yml
@@ -22,4 +22,4 @@
       authorized_key:
         user: rke
         state: present
-        key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
+        key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
