--- a/hosts.ini
+++ b/hosts.ini
@@ -1,16 +1,10 @@
 [all:vars]
 ansible_user=centos
 ansible_become=true
-ansible_ssh_private_key_file=/home/centos/.ssh/id_ed25519
+ansible_ssh_private_key_file=/home/centos/.ssh/id_rsa
 
 [master]
-10.120.64.21
-10.120.64.22
-10.120.64.23
+192.168.10.28
 
 [worker]
-10.120.64.31
-10.120.64.32
-10.120.64.33
-
-
+192.168.10.129
